--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc: ^7.0.0
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^7.0.0
   flutter_redux: ^0.8.2
   redux: ^5.0.0
 
