--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   bloc: ^7.0.0
+  connectivity_plus: ^1.0.1
   cupertino_icons: ^1.0.2
   flutter_bloc: ^7.0.0
   flutter_redux: ^0.8.2
