--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^7.0.0
   flutter_redux: ^0.8.2
+  hydrated_bloc: ^7.0.0
+  path_provider: ^2.0.1
   redux: ^5.0.0
 
 dev_dependencies:
